fix: Track .claude/out/ directory for GitHub Actions workflow
- Remove .claude/out/ from .gitignore to allow GitHub Actions to access scope files
- Add scope.json and scope.summary.md for issue creation workflow
- This enables the automated /accept-scope → GitHub Issues pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,7 @@ temp/
 .dockerignore
 
 # Claude Code
-.claude/out/
+# .claude/out/ is intentionally tracked for GitHub Actions integration
 
 # Secrets
 .secrets
