--- a/.github/workflows/scope-to-issues.yml
+++ b/.github/workflows/scope-to-issues.yml
@@ -13,6 +13,10 @@ on:
 jobs:
   create-issues:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
     
     steps:
       - uses: actions/checkout@v4
